src/index.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap");

* {
  font-family: "Inter", sans-serif;
}

html {
  scroll-behavior: smooth;
  box-sizing: border-box;
}

body {
  padding: 0;
  margin: 0;
  overflow-x: hidden;
}

.layout {
  /* background: url("https://image-aws-us-west-2.vsco.co/6b3a87/237518352/624a231b5637f65a7d000001/vsco624a23282e5e8.jpg"); */
  background: linear-gradient(
      rgba(255, 255, 255, 0.92),
      rgba(255, 255, 255, 0.92)
    ),
    url("https://image-aws-us-west-2.vsco.co/6b3a87/237518352/624a231b5637f65a7d000001/vsco624a23282e5e8.jpg");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}

.navbar {
  position: fixed;
  bottom: 6%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 54px;
  width: 320px;
  border-radius: 99px;
  padding: 0px 16px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: rgba(247, 246, 255, 0.57);
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(158, 195, 224, 0.2);
  backdrop-filter: blur(7.4px);
  -webkit-backdrop-filter: blur(7.4px);
  border: 2px solid rgba(0, 0, 0, 0.2);
}

.navbar-icon {
  color: #fff;
  transition: 0.1s ease;
  cursor: pointer;
}

.navbar-icon:hover {
  transform: scale(0.95);
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.rotate {
  animation: rotate 4s linear infinite;
}

.fade-in-from-bottom {
  animation: fadeInFromBottom 1s ease forwards;
}

@keyframes fadeInFromBottom {
  from {
    opacity: 0;
    transform: translateY(18px);
  }
  to {
    opacity: 1;
    transform: translateY(0px);
  }
}

/*Media query for Navbar*/

@media (max-width: 426px) {
  .navbar {
    width: 100%;
    padding: 0px 32px;
    background-color: rgba(247, 246, 255, 0.85);
    border-radius: 16px 16px 0px 0px;
    bottom: 0;
    margin: 0;
  }
}

/*Scrollbar*/

::-webkit-scrollbar {
  height: 0px;
  width: 7px;
}

::-webkit-scrollbar-track {
  background: #ededed;
}

::-webkit-scrollbar-thumb {
  background: rgb(143, 143, 143);
  border-radius: 24px;
}

::-webkit-scrollbar-thumb:hover {
  background: #555;
}

